--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "tailwindcss": "^3.4.17"
   },
   "scripts": {
-    "build-css": " tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "@tsconfig/node16": "^16.1.3",
